Fix font Legibility for desktop and made social icons more legible

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -30,6 +30,10 @@ h1 {
 	width: 40%;
 }
 
+.width-50 {
+	width: 50%;
+}
+
 .width-60 {
 	width: 60%;
 }
